--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "yajra/laravel-datatables-oracle": "^9.20"
+        "yajra/laravel-datatables-oracle": "^9.20",
+        "laravelcollective/html": "^6.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
